--- a/Session 1/Tuscany/adventures.html
+++ b/Session 1/Tuscany/adventures.html
@@ -12,15 +12,15 @@
     <p>This is a short chronicle of my visit to Italy. Click on the thumbnails to see a larger view of each photograph.Enjoy!</p>
 
     <h2>Pozzarello</h2>
-    <img src="thumbnails/window_thumb.jpg" alt="">
+    <a href="window.html"><img src="thumbnails/window_thumb.jpg" alt=""></a>
     <p> The house we stayed in was called Pozzarello and it was built around the year 1200 as the home ofthe gardner who tended the grounds of the adjacent castle. The thick walls kept us nice and cool inside, despitethe blistering mid-day heat. This is the view from our bedroom window.</p>
 
     <h2>The Tuscan Countryside</h2>
-    <img src="thumbnails/countryside_thumb.jpg" alt="">
+    <a href="countryside.html"><img src="thumbnails/countryside_thumb.jpg" alt=""></a>
     <p> This is the scene on the way to Montalcino (all roads lead to Montalcino!). It looks a lot like thescene on the way to Sienna, and the scene on the way to the grocery store. We were surrounded by beautifulcountryside for most of our travels.</p>
 
     <h2>Sienna</h2>
-    <img src="thumbnails/sienna_thumb.jpg" alt="">
+    <a href="streets.html"><img src="thumbnails/sienna_thumb.jpg" alt=""></a>
     <p>The closest city to our villa was Sienna, about 30 minutes away. We spent many days exploring thesteep and crooked streets, sampling the local cuisine at outdoor restaurants, and stopping in the dark and echoeyDuomo to escape the sun.</p>
 
 </body>
