--- a/Session 1/Blackgoose/contact.html
+++ b/Session 1/Blackgoose/contact.html
@@ -20,47 +20,56 @@
 
     <h2>Contact Us - Reservation</h2>
     <form>
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname"> 
-        <br>
-        <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname">
-        <br>
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
-        <br>
-        <label for="date">Date:</label>
-        <input type="text" id="date" name="date">
-        <br>
-        <label for="time">Time:</label>
-        <input type="text" id="time" name="time">
-        <br>
-        <text>No. Of People :</text>
-        <input type="radio" id="1"value="1">
-        <label for="1">1</label>
-        <input type="radio" id="2"  value="2">
-        <label for="2">2</label>
-        <input type="radio" id="3" value="3">
-        <label for="3">3</label>
-        <input type="radio" id="4" value="4">
-        <label for="4">4</label>
-        <input type="radio" id="5" value="5">
-        <label for="5">5</label>
-        <input type="radio" id="6" value="6">
-        <label for="6">6</label>
-        <br>
-        <label>Purpose of Reservation:</label>
-        <SELECT NAME="team_idID=team_id">
-            <OPTION VALUE=1>None</OPTION>
-            <OPTION VALUE=2>Dinner</OPTION>
-            <OPTION VALUE=3>Lunch</OPTION>
-        </SELECT>
-        <br>
-        <label>Special Instructions:</label>
-        <textarea name="" id="" cols="30" rows="3"></textarea>
- 
-        <br>
-        <br>
+        <table>
+            <tr>
+                <td>First Name:</td>
+                <td><input type="text" name="first_name" maxlength="50"></td>
+            </tr>
+            <tr>
+                <td>Last Name:</td>
+                <td><input type="text" name="last_name" maxlength="50"></td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td><input type="email" name="email"></td>
+            </tr>
+            <tr>
+                <td>Date:</td>
+                <td><input type="date" name="date" min="2019-09-01" max="2019-10-01"></td>
+            </tr>
+             <tr>
+                <td>Time:</td>
+                <td><input type="time" name="time"></td>
+            </tr>
+            <tr>
+                <td>No. of People:</td>
+                <td>
+                  <input type="radio" name="pax" value="1">1
+                  <input type="radio" name="pax" value="1">2
+                  <input type="radio" name="pax" value="1">3
+                  <input type="radio" name="pax" value="1">4
+                  <input type="radio" name="pax" value="1">5
+                  <input type="radio" name="pax" value="1">6
+                </td>
+            </tr>
+            <tr>
+                <td>Purpose of Reservation:</td>
+                <td>
+                <select name="purpose">
+                  <option value="None">None</option>
+                  <option value="Anniversary">Anniversary</option>
+                  <option value="Birthday">Birthday</option>
+                </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Special Instructions:</td>
+                <td>
+                <textarea name="special"></textarea>
+                </td>
+            </tr>
+        </table>
+        
         <button type="submit">Send</button>
       </form> 
 </body>
