finished storing of data

--- a/Session 2/To-Do-List/index.html
+++ b/Session 2/To-Do-List/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Resources/bootstrap.min.css">
     <link rel="stylesheet" href="css/mystyle.css">
 
 </head>
@@ -18,11 +18,11 @@
             <div class="header bg-white border-0">
                 <h1>Todo List</h1>
             </div>
-            <form class="form">
+            <form class="form" >
                 <!-- Task -->
                 <div class="form-group ">
                     <label for="todo">Task :</label>
-                    <input type="text" class="form-control" id="todoinput" required>
+                    <input type="text" class="form-control" id="todoinput" required />
                 </div>
 
                 <!-- Deadline -->
@@ -61,8 +61,8 @@
 
 
 </body>
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/bootstrap.bundle.js"></script>
+<script src="../../Resources/jquery-3.6.0.min.js"></script>
+<script src="../../Resources/bootstrap.bundle.js"></script>
 <script src="js/app.js"></script>
 <script src="https://kit.fontawesome.com/7ec0d1617e.js" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/86ec7c1143.js"></script>
