testing out search function

--- a/Session 2/To-Do-List/index.html
+++ b/Session 2/To-Do-List/index.html
@@ -79,7 +79,7 @@
             <!-- Filter by -->
             <div class="form-group">
                 <label for="search">Filterby:</label>
-                <input class="form-control" type="search" placeholder="Search" id="search" aria-label="Search">
+                <input class="form-control" type="search" oninput="SearchTodoList()" placeholder="Search" id="search" aria-label="Search">
             </div>
             <!-- Clear Btn -->
             <button type="submit"id="order-button" onclick ="resetlist()"class="btn btn-danger">
