--- a/Session 2/To-Do-List/index.html
+++ b/Session 2/To-Do-List/index.html
@@ -79,14 +79,16 @@
             <!-- Filter by -->
             <div class="form-group">
                 <label for="search">Filterby:</label>
-                <input class="form-control" type="search" oninput="SearchTodoList()" placeholder="Search" id="search" aria-label="Search">
+                <input class="form-control" type="search" placeholder="Search" id="search" aria-label="Search">
             </div>
+        </form>
+
             <!-- Clear Btn -->
             <button type="submit"id="order-button" onclick ="resetlist()"class="btn btn-danger">
                 Clear!
             </button>
 
-        </form>
+        
     </div>
 
 
