--- a/Session 2/To-Do-List/index.html
+++ b/Session 2/To-Do-List/index.html
@@ -84,7 +84,7 @@
         </form>
 
             <!-- Clear Btn -->
-            <button type="submit"id="order-button" onclick ="resetlist()"class="btn btn-danger">
+            <button type="submit"id="clear-btn" class="btn btn-danger">
                 Clear!
             </button>
 
