--- a/Session 2/tic-tac-toe/index.html
+++ b/Session 2/tic-tac-toe/index.html
@@ -16,7 +16,7 @@
         <div class="jumbotron">
             <h1>Welcome to Tic-Tac-Toe</h1>
             <button class="btn btn-danger" id="restart-btn">Restart Game</button>
-            <button class="btn btn-primary" id="logs-btn">Game Logs</button>
+            <button class="btn btn-primary" id="logs-btn" data-toggle="modal" data-target="#HistoryModal">Game Logs</button>
         </div>
 
         <h5><b>Steps: </b></h3>
@@ -43,6 +43,22 @@
     <section class="display-announcer hide"></section>
 
 
+
+    <!--  Board History Modal -->
+    <div class="modal fade" id="HistoryModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Board History</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
